--- a/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
@@ -1,21 +1,157 @@
-<!DOCTYPE html>
-<html lang="zh-cn">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>宝宝档案</title>
+{% extends "weixin/weixin_base.html" %}
 
-    <!-- Bootstrap -->
-    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet">
+{% block title %} 宝宝档案 {% endblock %}
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+{% block container %}
 
+<div>
+
+  <div class="panel panel-default" style="margin-top:5px">
+    <div class="panel-heading" style="color:orange">
+      <h4 class="panel-title">宝宝档案</h4>
+    </div>
+    <div class="panel-body">
+      <h5 style="color:#3071a9">出生/预产信息 </h5>
+      <div class="row">
+	<div class="col-xs-3">
+	  <p style="float:right">年</p>
+	</div>
+	<div class="col-xs-9">
+	  <select id="id_year" class="form-control input-sm">
+	    <option value="0">请选择</option>
+	    {% for year in years %}
+	    {% if year == user.birth_year %}
+	    <option value="{{ year }}" selected="selected">{{ year }}</option>
+	    {% else %}
+	    <option value="{{ year }}">{{ year }}</option>
+	    {% endif %}
+	    {% endfor %}
+	  </select>
+	</div>
+      </div>
+      <div class="row">
+	<div class="col-xs-3">
+	  <p style="float:right">月</p>
+	</div>
+	<div class="col-xs-9">
+	  <select id="id_month" class="form-control input-sm">
+	    <option value="0">请选择</option>
+	    {% for month in months %}
+	    {% if month == user.birth_month %}
+	    <option value="{{ month }}" selected="selected">{{ month }}</option>
+	    {% else %}
+	    <option value="{{ month }}">{{ month }}</option>
+	    {% endif %}
+	    {% endfor %}
+	  </select>
+	</div>
+      </div>
+      <div class="row">
+	<div class="col-xs-3">
+	  <p style="float:right">性别</p>
+	</div>
+	<div class="col-xs-9">
+	  <select id="id_sex" class="form-control input-sm">
+	    <option value="0">请选择</option>
+	    {% if user.baby_sex == "m" %}
+	    <option value="m" selected="selected">王子</option>
+	    <option value="f">公主</option>
+	    {% elif user.baby_sex == "f" %}
+	    <option value="m">王子</option>
+	    <option value="f" selected="selected">公主</option>
+	    {% else %}
+	    <option value="m">王子</option>
+	    <option value="f">公主</option>
+	    {% endif %}
+	  </select>
+	</div>
+      </div>
+
+
+      <div class="row">
+	<div class="col-xs-12">
+	  <h5 style="color:#3071a9">验证手机</h5>
+
+	  <div class="input-group">
+	    <span class="input-group-addon">手机号</span>
+	    {% if user.isvalid %}
+	    <input id="id_mobile_input" type="text" value="{{ user.mobile }}"class="form-control" disabled="disabled">
+	    <span class="input-group-btn">
+	      <button id="id_requestcode_button" class="btn btn-success" type="button" status="1">已验证</button>
+	    </span>
+	  </div>
+	  {% else %}
+	  <input id="id_mobile_input" type="text" class="form-control">
+	  <span class="input-group-btn">
+	    <button id="id_requestcode_button" class="btn btn-primary" type="button" onclick="requestcode();" status="0">获验证码</button>
+	  </span>
+
+	</div>
+	<div id="id_verifycode_group" class="input-group">
+	  <span class="input-group-addon">验证码</span>
+	  <input id="id_code_input" type="text" class="form-control">
+	  <span class="input-group-btn">
+	    <button id="id_verifycode_button" class="btn btn-warning" type="button" onclick="verifycode();">立即验证</button>
+	  </span>
+	</div>
+	{% endif %}
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12">
+	<h5 style="color:#3071a9">收货信息</h5>
+	<div class="input-group">
+	  <span class="input-group-addon">收货人 </span>
+	  <input id="id_receiver_name" type="text" value="{{ user.receiver_name}}" class="form-control">{% csrf_token %}
+	</div>
+
+	<div class="input-group">
+	  <input id="id_province" type="text" value="{{ user.province }}" class="form-control">
+	  <span class="input-group-addon">省</span>
+	</div>
+	<div class="input-group">
+	  <input id="id_city" type="text" value="{{ user.city }}" class="form-control">
+	  <span class="input-group-addon">市</span>
+	</div>
+	<div class="input-group">
+	  <span class="input-group-addon">详址</span>
+	  <input id="id_streetaddr" type="text" value="{{ user.address }}" class="form-control">
+	</div>
+
+      </div>
+    </div>
+
+    <div class="row" style="margin-top:10px">
+      <div class="col-xs-12" style="text-align:center">
+	<button id="id_savebutton" class="btn btn-warning" onclick="babyinfo();">保存信息</button><label id="id_savelabel"></label>
+      </div>
+    </div>
+    
+  </div>
+  
+
+  <div class="panel panel-default" style="margin-top:5px">
+    <div class="panel-body">
+
+      <div class="row">
+	<div class="col-xs-12">
+	  <h5 style="color:#3071a9">温馨提示</h5>
+	  <p>请认真填写宝宝信息。我们会据此信息来免费寄送适合宝宝的礼物，审核您的试用申请等。宝宝信息及地址错误可能造成商品不能被寄送到达。</p>
+	</div>
+      </div>
+    </div>
+  </div>
+      
+  <div class="footer">
+    <p>© Uni Littles 2014</p>
+  </div>
+
+</div>
+
+{% endblock %}
+
+{% block tail_script %}
     <script type="text/javascript">
       function validateMobile(s) {
         var validateReg = /^((\+?86)|(\(\+86\)))?1\d{10}$/;
@@ -104,158 +240,6 @@
       
       
     </script>
+
+{% endblock %}
     
-  </head>
-  <body>
-    <div >
-
-      <div class="panel panel-default" style="margin-top:5px">
-	<div class="panel-heading" style="color:orange">
-	  <h4 class="panel-title">宝宝档案</h4>
-	</div>
-	<div class="panel-body">
-	  <h5 style="color:#3071a9">出生/预产信息 </h5>
-	  <div class="row">
-	    <div class="col-xs-3">
-	      <p style="float:right">年</p>
-	    </div>
-	    <div class="col-xs-9">
-	      <select id="id_year" class="form-control input-sm">
-		<option value="0">请选择</option>
-		{% for year in years %}
-		{% if year == user.birth_year %}
-		<option value="{{ year }}" selected="selected">{{ year }}</option>
-		{% else %}
-		<option value="{{ year }}">{{ year }}</option>
-		{% endif %}
-		{% endfor %}
-	      </select>
-	    </div>
-	  </div>
-	  <div class="row">
-	    <div class="col-xs-3">
-	      <p style="float:right">月</p>
-	    </div>
-	    <div class="col-xs-9">
-	      <select id="id_month" class="form-control input-sm">
-		<option value="0">请选择</option>
-		{% for month in months %}
-		{% if month == user.birth_month %}
-		<option value="{{ month }}" selected="selected">{{ month }}</option>
-		{% else %}
-		<option value="{{ month }}">{{ month }}</option>
-		{% endif %}
-		{% endfor %}
-	      </select>
-	    </div>
-	  </div>
-	  <div class="row">
-	    <div class="col-xs-3">
-	      <p style="float:right">性别</p>
-	    </div>
-	    <div class="col-xs-9">
-	      <select id="id_sex" class="form-control input-sm">
-		<option value="0">请选择</option>
-		{% if user.baby_sex == "m" %}
-		<option value="m" selected="selected">王子</option>
-		<option value="f">公主</option>
-		{% elif user.baby_sex == "f" %}
-		<option value="m">王子</option>
-		<option value="f" selected="selected">公主</option>
-		{% else %}
-		<option value="m">王子</option>
-		<option value="f">公主</option>
-		{% endif %}
-	      </select>
-	    </div>
-	  </div>
-
-
-	  <div class="row">
-	    <div class="col-xs-12">
-	      <h5 style="color:#3071a9">验证手机</h5>
-
-	      <div class="input-group">
-		<span class="input-group-addon">手机号</span>
-		{% if user.isvalid %}
-		<input id="id_mobile_input" type="text" value="{{ user.mobile }}"class="form-control" disabled="disabled">
-		<span class="input-group-btn">
-		  <button id="id_requestcode_button" class="btn btn-success" type="button" status="1">已验证</button>
-		</span>
-		</div>
-		{% else %}
-		<input id="id_mobile_input" type="text" class="form-control">
-		<span class="input-group-btn">
-		  <button id="id_requestcode_button" class="btn btn-primary" type="button" onclick="requestcode();" status="0">获验证码</button>
-		</span>
-
-	      </div>
-	      <div id="id_verifycode_group" class="input-group">
-		<span class="input-group-addon">验证码</span>
-		<input id="id_code_input" type="text" class="form-control">
-		<span class="input-group-btn">
-		  <button id="id_verifycode_button" class="btn btn-warning" type="button" onclick="verifycode();">立即验证</button>
-		</span>
-	      </div>
-	      {% endif %}
-	    </div>
-	  </div>
-
-	  <div class="row">
-	    <div class="col-xs-12">
-	      <h5 style="color:#3071a9">收货信息</h5>
-	      <div class="input-group">
-		<span class="input-group-addon">收货人 </span>
-		<input id="id_receiver_name" type="text" value="{{ user.receiver_name}}" class="form-control">{% csrf_token %}
-	      </div>
-
-	      <div class="input-group">
-		<input id="id_province" type="text" value="{{ user.province }}" class="form-control">
-		<span class="input-group-addon">省</span>
-	      </div>
-	      <div class="input-group">
-		<input id="id_city" type="text" value="{{ user.city }}" class="form-control">
-		<span class="input-group-addon">市</span>
-	      </div>
-	      <div class="input-group">
-		<span class="input-group-addon">详址</span>
-		<input id="id_streetaddr" type="text" value="{{ user.address }}" class="form-control">
-	      </div>
-
-	    </div>
-	  </div>
-
-	  <div class="row" style="margin-top:10px">
-	    <div class="col-xs-12" style="text-align:center">
-	      <button id="id_savebutton" class="btn btn-warning" onclick="babyinfo();">保存信息</button><label id="id_savelabel"></label>
-	    </div>
-	  </div>
-	  
-	</div>
-      </div>
-
-      <div class="panel panel-default" style="margin-top:5px">
-	<div class="panel-body">
-
-	  <div class="row">
-	    <div class="col-xs-12">
-	      <h5 style="color:#3071a9">温馨提示</h5>
-	      <p>请认真填写宝宝信息。我们会据此信息来免费寄送适合宝宝的礼物，审核您的试用申请等。宝宝信息及地址错误可能造成商品不能被寄送到达。</p>
-	    </div>
-	  </div>
-	</div>
-      </div>
-      
-      <div class="footer">
-	<p>© Uni Littles 2014</p>
-      </div>
-
-    </div>
-    
-    
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
-  </body>
-</html>
