--- a/shopmanager/shopapp/weixin/templates/weixin/remind.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/remind.html
@@ -1,69 +1,52 @@
-<!DOCTYPE html>
-<html lang="zh-cn">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>宝宝档案</title>
+{% extends "weixin/weixin_base.html" %}
 
-    <!-- Bootstrap -->
-    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet">
+{% block title %} 手机绑定 {% endblock %}
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+{% block container %}
 
-    
-  </head>
-  <body>
-    <div >
+<div >
 
-      <div class="panel panel-default" style="margin-top:5px">
-	<div class="panel-heading" style="color:orange">
-	  <h4 class="panel-title">手机绑定</h4>
-	</div>
-	<div class="panel-body">
-	  <div class="row">
-	    <div class="col-xs-12">
-	      <h5 style="color:#3071a9">查询订单请先验证手机号</h5>
+  <div class="panel panel-default" style="margin-top:5px">
+    <div class="panel-heading" style="color:orange">
+      <h4 class="panel-title">手机绑定</h4>
+    </div>
+    <div class="panel-body">
+      <div class="row">
+	<div class="col-xs-12">
+	  <h5 style="color:#3071a9">查询订单请先验证手机号</h5>
 
-	      <div class="input-group">
-		<span class="input-group-addon">手机号</span>
-		<input id="id_mobile_input" type="text" class="form-control">
-		<span class="input-group-btn">
-		  <button id="id_requestcode_button" class="btn btn-primary" type="button" onclick="requestcode();" status="0">获验证码</button>
-		</span>
+	  <div class="input-group">
+	    <span class="input-group-addon">手机号</span>
+	    <input id="id_mobile_input" type="text" class="form-control">
+	    <span class="input-group-btn">
+	      <button id="id_requestcode_button" class="btn btn-primary" type="button" onclick="requestcode();" status="0">获验证码</button>
+	    </span>
 
-	      </div>
-	      <div id="id_verifycode_group" class="input-group">
-		<span class="input-group-addon">验证码</span>
-		<input id="id_code_input" type="text" class="form-control">
-		<span class="input-group-btn">
-		  <button id="id_verifycode_button" class="btn btn-warning" type="button" onclick="verifycode();">立即验证</button>
-		</span>
-	      </div>
-
-	    </div>
+	  </div>
+	  <div id="id_verifycode_group" class="input-group">
+	    <span class="input-group-addon">验证码</span>
+	    <input id="id_code_input" type="text" class="form-control">
+	    <span class="input-group-btn">
+	      <button id="id_verifycode_button" class="btn btn-warning" type="button" onclick="verifycode();">立即验证</button>
+	    </span>
 	  </div>
 
-	  
 	</div>
       </div>
 
-      <div class="footer">
-	<p>© Uni Littles 2014</p>
-      </div>
-
+      
     </div>
+  </div>
+
+  <div class="footer">
+    <p>© Uni Littles 2014</p>
+  </div>
+
+</div>
+{% endblock %}
+
+{% block tail_script %}    
     
-    
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="http://cdn.bootcss.com/jquery/1.11.1/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript">
       function validateMobile(s) {
         var validateReg = /^((\+?86)|(\(\+86\)))?1\d{10}$/;
@@ -112,6 +95,4 @@
       };
       
     </script>
-
-  </body>
-</html>
+{% endblock %}
