--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -4,7 +4,7 @@
 {% if identical %}
 我刚在优尼世界申请了宝宝睡袋，礼盒包装免费寄到家哦！你也快去给宝宝领一件吧～～ 
 {% else %}
-优尼世界8月送大礼！
+优尼世界 8月送大礼！
 {% endif %}
 {% endblock %}
 
@@ -37,9 +37,9 @@
 
       <div class="row">
 	<div class="col-xs-12">
-	  <p>&nbsp;&nbsp;&nbsp;&nbsp;亲，您没看错！是的，优尼世界的这款天猫、京东已经售出30000多件，好评如潮的睡袋，现在免费啦！快抢啊，一定要为宝宝抢一件哦！</p>
+	  <p>&nbsp;&nbsp;&nbsp;&nbsp;亲，您没看错！是的，优尼世界的睡袋可以免费领啦！这款天猫、京东已经售出30000多件，好评如潮的睡袋，8月1日首次开放免费试用。快抢啊！！！</p>
 	  <p style="font-size:20px; color:red; text-align:center">VIP邀请码: {{ vipcode }}</p>
-
+	  <p>&nbsp;&nbsp;&nbsp;&nbsp;关注【优尼世界】公众微信，[活动中心] -> [免费试用]，开始申请吧！</p>
 	  <div class="thumbnail">
 	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs3fFxcBMRZsmProgXkuSPFV9JhdzzlaOcZKicHQbE6rtWG2QSFXZGht6qCiaTTjQE50awgP1txAHzQ/0" alt="...">
 	  </div>
@@ -58,7 +58,7 @@
 
       <div class="row">
 	<div class="col-xs-12">
-	  <p>&nbsp;&nbsp;&nbsp;&nbsp;亲，具体申请很简单：关注微信，申请就搞定啦！</p>
+	  <p>&nbsp;&nbsp;&nbsp;&nbsp;亲，具体申请很简单：关注微信，然后申请就搞定啦！</p>
 	  <p>&nbsp;&nbsp;&nbsp;&nbsp;还有，悄悄告诉您：<font style="color:red">一定要分享到朋友圈，会提高中奖几率！！！(朋友申请到了会感激您！只要有10个人用你的VIP邀请码来申请，你就一定会被选中！)</font></p>
 	  <div class="thumbnail">
 	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs3fFxcBMRZsmProgXkuSPFeuNDSQ8Mt2socAhafdNqaR1wIwHxvt8Lxbvzddr3h7s8qhXl0dt7eQ/0" alt="...">
