--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -43,7 +43,7 @@
 	  <p>厚度：
 	    <select class="form-control input-sm" name="weight" id="id_weight">
 	      <option value="0">选择</option>
-	      <option value="1">春夏薄款</option>
+	      <option value="1">春秋薄款</option>
 	      <option value="2">春秋中厚款</option>
 	      <option value="3">春秋加厚款</option>
 	    </select>
