--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -75,8 +75,8 @@
 <div class="row">
   <div class="col-xs-12">
     <h5 style="color:#3071a9">申请须知</h5>
-    <p>1) 申请试用前，请到微信菜单【查询】->【宝宝档案】完善信息，以便我们审核申请和邮寄产品给宝宝。</p>
-    <p>2) 把带VIP邀请码的试用通告分享到您的朋友圈，会大大提高您的选中几率！</p>
+    <p>1) 申请试用前，请到微信菜单【我的】->【宝宝档案】完善信息，以便我们审核申请和邮寄产品给宝宝。</p>
+    <p>2) 申请之后，您会得到一个带VIP邀请码的专属页面，分享到您的朋友圈，会大大提高您的选中几率！</p>
     <p>3) 若您有过购买记录、晒单记录、好评记录、或邀请好友记录，系统会优先审核您的申请。</p>
   </div>
 </div>
