--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -78,6 +78,16 @@
     <p>1) 申请试用前，请到微信菜单【我的】->【宝宝档案】完善信息，以便我们审核申请和邮寄产品给宝宝。</p>
     <p style="color:orange">2) 申请之后，您会得到一个带VIP邀请码的专属页面，分享到您的朋友圈，会大大提高您的选中几率！</p>
     <p>3) 若您有过购买记录、晒单记录、好评记录、或邀请好友记录，系统会优先审核您的申请。</p>
+    <p>4) 您邀请的好友一定要认真填写宝宝档案，若是虚假信息，会影响您的申请审核。</p>
+    <p>5) 您邀请的好友一定要认真填写宝宝档案，若是虚假信息，会影响您的申请审核。</p>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-xs-12">
+    <h5 style="color:#3071a9">常见问题</h5>
+    <p>1) VIP邀请码在哪里? <font style="color:red">在您看到的微信帖子里面, 请阅读寻找!</font></p>
+    <p>2) 我收不到手机验证码? <font style="color:red">微信中输入0, 等待30秒。一份钟没收到，可以重复。</font></p>
   </div>
 </div>
 
