--- a/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/babyinfo.html
@@ -122,9 +122,10 @@
       </div>
     </div>
 
-    <div class="row" style="margin-top:10px">
+    <div class="row" style="margin-top:10px;text-align:center">
+      <p id="id_savelabel" style="color:red"></p>
       <div class="col-xs-12" style="text-align:center">
-	<button id="id_savebutton" class="btn btn-warning" onclick="babyinfo();">保存信息</button><label id="id_savelabel"></label>
+	<button id="id_savebutton" class="btn btn-warning" onclick="babyinfo();">保存信息</button>
       </div>
     </div>
     
