--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -59,7 +59,7 @@
       <div class="row">
 	<div class="col-xs-12">
 	  <p>&nbsp;&nbsp;&nbsp;&nbsp;亲，具体申请很简单：关注微信，然后申请就搞定啦！</p>
-	  <p>&nbsp;&nbsp;&nbsp;&nbsp;还有，悄悄告诉您：<font style="color:red">一定要分享到朋友圈，会提高中奖几率！！！(朋友申请到了会感激您！只要有10个人用你的VIP邀请码来申请，你就一定会被选中！)</font></p>
+	  <p>&nbsp;&nbsp;&nbsp;&nbsp;还有，悄悄告诉您：<font style="color:red">一定要分享到朋友圈，会提高中奖几率！！！(朋友申请到了会感激您！)</font></p>
 	  <div class="thumbnail">
 	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs3fFxcBMRZsmProgXkuSPFeuNDSQ8Mt2socAhafdNqaR1wIwHxvt8Lxbvzddr3h7s8qhXl0dt7eQ/0" alt="...">
 	  </div>
