--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -14,6 +14,13 @@
     <form class="form-group" method="post" action="/weixin/sampleapply/" onsubmit="return check()">{% csrf_token %}
       <input type="hidden" value="{{ sample.pk }}" name="sample_pk"/>
       <div class="row">
+	<div class="col-xs-12">
+	  <p style="color:red">公告：亲，这次活动由于小编的预估不足，原本只准备了200个睡袋，准备每天派发20件。但是，由于申请的妈妈们远远超出了我们的预计的数量，现特作以下调整（妈妈们看准了再行动哦）：</p>
+	  <p style="color:red"> 1）8月3日早上7:15之前提交成功的申请，总共不足4500份，将有10%（450份）的申请会被通过。如果您的VIP邀请码被使用10次以上，恭喜您，您的申请通过了。</p>
+	  <p style="color:red"> 2）8月3日早上7：15以后提交的申请，讲按照VIP邀请码使用次数、购买记录、晒单记录、实际需求等因素综合审核。每天限额50件！可以肯定的是，如果您分享的VIP邀请码被朋友使用次数越多，您被选中的几率就更大！</p>
+	</div>
+      </div>
+      <div class="row">
 	<div class="col-xs-6" style="text-align:center">
 	  <p><a href="{{ sample.sale_url }}">查看商品详情</a></p>
 	  <a href="{{ sample.sale_url }}" class="thumbnail">
