--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -93,7 +93,7 @@
   <div class="col-xs-12">
     <h5 style="color:#3071a9">常见问题</h5>
     <p>1) VIP邀请码在哪里? <font style="color:red">在您看到的微信帖子里面, 请阅读寻找!</font></p>
-    <p>2) 我收不到手机验证码? <font style="color:red">微信中输入0，等待30秒。一份钟没收到，可以重复。</font></p>
+    <p>2) 我收不到手机验证码? <font style="color:red">微信中输入0，根据提示操作。若一份钟没收到短信验证码，可以重复。</font></p>
     <p>3) 怎么查看我邀请了几个好友? <font style="color:red">系统暂时无法提供查询功能，但您的专属VIP邀请码每次使用都会被记录。活动结束后，技术人员会进行统计，统计结果可供查询。</font></p>
   </div>
 </div>
