--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -21,7 +21,7 @@
 	<div class="col-xs-12">
 	  <p style="color:blue">亲，您的申请已经成功提交！</p>
 	  <p style="color:blue">你获得了专属VIP邀请码：{{ vipcode }}，快分享到你朋友圈吧!</p>
-	  <p style="color:blue">只要有10个好友使用您的邀请码，您的申请就一定通过啦！</p>
+	  <p style="color:blue">您的专属VIP邀请码被朋友使用次数越多，您被选中的几率就更大啦！</p>
 	  <p style="color:blue;font-size:20px">分享朋友圈后蓝色文字将自动消失！</p>
 	</div>
       </div>
@@ -40,9 +40,6 @@
 	  <p>&nbsp;&nbsp;&nbsp;&nbsp;亲，您没看错！是的，优尼世界的睡袋可以免费领啦！这款天猫、京东已经售出30000多件，好评如潮的睡袋，8月1日首次开放免费试用。快抢啊！！！</p>
 	  <p style="font-size:20px; color:red; text-align:center">VIP邀请码: {{ vipcode }}</p>
 	  <p>&nbsp;&nbsp;&nbsp;&nbsp;关注【优尼世界】公众微信，[活动中心] -> [免费试用]，开始申请吧！</p>
-	  <div class="thumbnail">
-	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs3fFxcBMRZsmProgXkuSPFV9JhdzzlaOcZKicHQbE6rtWG2QSFXZGht6qCiaTTjQE50awgP1txAHzQ/0" alt="...">
-	  </div>
 	</div>
       </div>
 
