--- a/shopmanager/shopapp/weixin/templates/weixin/sampleapply.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleapply.html
@@ -35,12 +35,12 @@
 	  <div class="col-xs-12">
 	    <h5 style="color:#3071a9">试用问答</h5>
 	    <div>
-	      <p style="color:#3071a9">1. 如果你收到产品不满意，你会:</p>
-	      <p id="id_p11"><input type="radio" name="p1" value="0" id="id_input11"> 反正没花钱，无所谓。</p>
-	      <p id="id_p12"><input type="radio" name="p1" value="1" id="id_input12"> 把意见反馈，帮助卖家改进。</p>
-	      <p style="color:#3071a9">2. 如果你收到的产品很不错，你会:</p>
-	      <p id="id_p21"><input type="radio" name="p2" value="0" id="id_input21"> 很开心，赚到啦，下次再抢试用。 </p>
-	      <p id="id_p22"><input type="radio" name="p2" value="1" id="id_input22"> 推荐给朋友，分享到朋友圈。</p>
+	      <p style="color:#3071a9">1. 若您的申请通过了，我们需要你到天猫旗舰店付款购买，确认收到货满意之后，再全额退款给您，你会:</p>
+	      <p id="id_p11"><input type="radio" name="p1" value="0" id="id_input11"> 不愿意。</p>
+	      <p id="id_p12"><input type="radio" name="p1" value="1" id="id_input12"> 愿意。</p>
+	      <p style="color:#3071a9">2. 若您的申请没有通过，我们给您派发20元无条件优惠券，您会: </p>
+	      <p id="id_p21"><input type="radio" name="p2" value="0" id="id_input21"> 觉得没意思，优惠金额太少。</p>
+	      <p id="id_p22"><input type="radio" name="p2" value="1" id="id_input22"> 正好宝宝需要，用优惠券购买也算赚到。</p>
 	    </div>
 	  </div>
 	</div>
