--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -70,7 +70,7 @@
 	</div>
 	{% endif %}
 	{% else %}
-	<p style="color:red">亲，要到微信菜单【我的】->【宝宝档案】完善信息，申请才会开放哦！</p>
+	<p style="color:red">亲，要到微信菜单【我的】->【宝宝档案】完善信息，验证手机号码，申请才会开放哦！</p>
 	{% endif %}
       </div>
     </form>      
