--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -16,8 +16,9 @@
       <div class="row">
 	<div class="col-xs-12">
 	  <p style="color:red">公告：亲，这次活动由于小编的预估不足，原本只准备了200个睡袋，准备每天派发20件。但是，由于申请的妈妈们远远超出了我们的预计的数量，现特作以下调整（妈妈们看准了再行动哦）：</p>
-	  <p style="color:red"> 1）8月3日早上7:15以后提交的申请，将按照VIP邀请码使用次数、购买记录、晒单记录、实际需求等因素综合审核。每天限额50件！您的专属VIP邀请码被朋友使用越多，您被选中的几率就更大！</p>
-	  <p style="color:red"> 2）8月3日早上7:15之前提交成功的申请，总共4461份，按照之前的规定，将有10%（446份）的申请会被通过。</p>
+	  <p style="color:red"> 1）8月3日早上7:15以后提交的申请，将按照VIP邀请码使用次数、购买记录、晒单记录、实际需求等因素综合审核。每天限额50件！申请试用名单会在往后一周内公布！</p>
+	  <p style="color:red"> 2）8月3日早上7:15之前提交成功的申请，总共4461份，只要邀请码成功邀请10位好友申请试用就能通过，申请通过名单会在一周内公布。未通过者，将归到7:15之后的申请一起审核。</p>
+	  <p style="color:blue">3）活动期间在优尼微信商城购物，享受更多优惠！</p>
 	</div>
       </div>
       <div class="row">
