--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -37,8 +37,13 @@
 
       <div class="row">
 	<div class="col-xs-12">
-	  <p>&nbsp;&nbsp;&nbsp;&nbsp;亲，您没看错！是的，优尼世界的睡袋可以免费领啦！这款天猫、京东已经售出30000多件，好评如潮的睡袋，8月1日首次开放免费试用。快抢啊！！！</p>
+	  <p>&nbsp;&nbsp;&nbsp;&nbsp;亲，您没看错！是的，优尼世界的睡袋可以免费领啦！这款天猫、京东已经售出30000多件，好评如潮的睡袋，8月1日首次开放免费试用。快抢啊！！！</p>  
+	  {% if vipcode == "898786" %} 
+	  <p style="font-size:20px; color:red; text-align:center">您刚才输入的VIP邀请码错误，请用正确的VIP邀请码重新申请!</p>
+	  {% else %}
 	  <p style="font-size:20px; color:red; text-align:center">VIP邀请码: {{ vipcode }}</p>
+	  {% endif %}
+
 	  <p>&nbsp;&nbsp;&nbsp;&nbsp;关注【优尼世界】公众微信，[活动中心] -> [免费试用]，开始申请吧！</p>
 	</div>
       </div>
