--- a/shopmanager/shopback/items/templates/items/product_sale_stat.html
+++ b/shopmanager/shopback/items/templates/items/product_sale_stat.html
@@ -3,7 +3,7 @@
 <head>
    <title>商品销量统计</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+    <link href="{{ STATIC_URL }}bootstrap/css/bootstrap2.3.2.min.css" rel="stylesheet" type="text/css" />
     <link href="{{ STATIC_URL }}css/base.less" rel="stylesheet/less" type="text/css" />
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
