--- a/shopmanager/shopback/items/templates/items/product_stock_warn.html
+++ b/shopmanager/shopback/items/templates/items/product_stock_warn.html
@@ -10,7 +10,7 @@
 <script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
 <style type="text/css" title="currentStyle">
 	@import "{{ STATIC_URL }}bootstrap/css/bootstrap-responsive.min.css";
-	@import "{{ STATIC_URL }}bootstrap/css/bootstrap.min.css";
+	@import "{{ STATIC_URL }}bootstrap/css/bootstrap2.3.2.min.css";
 	@import "{{ STATIC_URL }}jquery/jquery-ui-1.10.1.css";
 	@import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css";
 	@import "{{ STATIC_URL }}jquery-datatable-addon/css/demo_table.css";
