--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -10,9 +10,9 @@
     <div class="panel-heading">公告</div>
     <div class="panel-body">
       <p>距离试用申请结束还有 <font style="color:red;font-size:20px">{{ days_left }}天{{ hours_left }}小时</font>，还有 <font style="color:red;font-size:20px">{{ slots_left }}份</font>名额哦！</p>
-      <p>分享您的专属VIP邀请码，越多人使用，您中奖的几率就越大！</p>
+      <p style="color:red;">分享<a href="/weixin/sampleads/{{ pk }}/">您的专属VIP邀请码</a>，越多人使用，您中奖的几率就越大！</p>
       
-      <p style="color:#3071a9">第一批中奖名单已公布，共{{ first_batch }}名（他们的VIP专属码均已被使用<font style="color:red;">超过10次</font>），祝贺她们！ <a href="">查看详细名单 >></a></p>
+      <p style="color:#3071a9">第一批中奖名单已公布，共{{ first_batch }}名（他们的VIP专属码均已被使用<font style="color:red;">超过10次</font>），祝贺她们！ <a href="/weixin/finallist/0/">查看详细名单 >></a></p>
     </div>
   </div>
 
@@ -27,8 +27,8 @@
       <p>pls do 1, 2, 3, to join </p>
       {% else %}
       <p>亲，请耐心等待，您的申请正在审核中。</p>
-      <p>还有<font style="color:red;font-size:20px">{{ slot_left }}</p>份名额可以领取，机会多多。邀请朋友使用您的专属VIP邀请码，越多人使用，您中奖的几率就越大哦！</p>
-      <p>您的专属邀请码页面 >></p>
+      <p>还有<font style="color:red;font-size:20px">{{ slots_left }}</p>份名额可以领取，机会多多。邀请朋友使用您的专属VIP邀请码，越多人使用，您中奖的几率就越大哦！</p>
+      <a href="/weixin/sampleads/{{ pk }}/">您的专属邀请码页面 >></a>
       {% endif %}
       {% else %}
       <p>亲，您还没有提交申请呢！</p>
