--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -27,7 +27,7 @@
       <p>pls do 1, 2, 3, to join </p>
       {% else %}
       <p>亲，请耐心等待，您的申请正在审核中。</p>
-      <p>还有<font style="color:red;font-size:20px">{{ slots_left }}</p>份名额可以领取，机会多多。邀请朋友使用您的专属VIP邀请码，越多人使用，您中奖的几率就越大哦！</p>
+      <p>还有<font style="color:red;font-size:20px">{{ slots_left }}</font>份名额可以领取，机会多多。邀请朋友使用您的专属VIP邀请码，越多人使用，您中奖的几率就越大哦！</p>
       <a href="/weixin/sampleads/{{ pk }}/">您的专属邀请码页面 >></a>
       {% endif %}
       {% else %}
