--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -22,7 +22,7 @@
 	  <p style="color:blue">亲，您的申请已经成功提交！</p>
 	  <p style="color:blue">你获得了专属VIP邀请码：{{ vipcode }}，快分享到你朋友圈吧!</p>
 	  <p style="color:blue">您的专属VIP邀请码被朋友使用次数越多，您被选中的几率就更大啦！</p>
-	  <p style="color:blue;font-size:20px">分享朋友圈后蓝色文字将自动消失！</p>
+	  <p style="color:blue;font-size:20px">分享朋友圈后蓝色文字只有你自己可以看见！</p>
 	</div>
       </div>
       {% endif %}
