--- a/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/sampleads.html
@@ -21,7 +21,7 @@
 	<div class="col-xs-12">
 	  <p style="color:blue">亲，您的申请已经成功提交！</p>
 	  <p style="color:blue">你获得了专属VIP邀请码：{{ vipcode }}，快分享到你朋友圈吧!</p>
-	  <p style="color:blue">您的专属VIP邀请码被朋友使用次数越多，您被选中的几率就更大啦！</p>
+	  <p style="color:blue">您的专属VIP邀请码被朋友<font style="color:red">使用10次以上</font>，您被选中的几率就大大提升啦！</p>
 	  <p style="color:blue;font-size:20px">分享朋友圈后蓝色文字只有你自己可以看见！</p>
 	</div>
       </div>
@@ -60,7 +60,7 @@
       <div class="row">
 	<div class="col-xs-12">
 	  <p>&nbsp;&nbsp;&nbsp;&nbsp;亲，具体申请很简单：关注微信，然后申请就搞定啦！</p>
-	  <p>&nbsp;&nbsp;&nbsp;&nbsp;还有，悄悄告诉您：<font style="color:red">申请提交后的页面一定要分享到朋友圈哦，这样您被选中的几率就更大啦！(朋友申请到了会感激您！)</font></p>
+	  <p>&nbsp;&nbsp;&nbsp;&nbsp;还有，悄悄告诉您：<font style="color:red">申请提交后的页面一定要分享到朋友圈哦，您的专属VIP邀请码被朋友<font style="color:red">使用10次以上</font>，您被选中的几率就大大提升啦！(朋友申请到了也会感激您！)</font></p>
 	  <div class="thumbnail">
 	    <img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLs3fFxcBMRZsmProgXkuSPFeuNDSQ8Mt2socAhafdNqaR1wIwHxvt8Lxbvzddr3h7s8qhXl0dt7eQ/0" alt="...">
 	  </div>
