--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -21,8 +21,8 @@
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">申请攻略</div>
     <div class="panel-body">
-      <p>截至8月4日16:00，所有专属VIP邀请码被使用超过10次的妈妈们均获申请通过（亲，我们信守承诺的哦！）</p>
-      <p>所以，首要任务是让专属VIP邀请码被使用10次以上。如果被使用20次以上，亲，您已具有决定性的竞争力啦！</p>
+      <p>1) 首要任务是让专属VIP邀请码被使用10次以上。</p>
+      <p style="color:red">2) 如果被使用20次以上，亲，您已具有决定性的竞争力啦！</p>
     </div>
   </div>
 
