--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -27,7 +27,7 @@
 	    <img src="{{ sample.pic_url }}" alt="...">
 	  </a>
 
-	  <p><font style="color:red; font-size:20px">{{ today_orders }}</font> 人已申请</p>
+	  <p><font style="color:red; font-size:20px">{{ today_orders }}</font> 人今日已申请</p>
 	</div>
 
 	<div class="col-xs-6">
