--- a/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/freesamples.html
@@ -16,8 +16,7 @@
       <div class="row">
 	<div class="col-xs-12">
 	  <p>距离试用申请结束还有 <font style="color:red;font-size:20px">{{ days_left }}天{{ hours_left }}小时</font>，还有 <font style="color:red;font-size:20px">{{ slots_left }}份</font>名额哦！</p>
-	  <p style="color:red"> 1）第一批审核名单已经公布，截至8月4日16:00，所有VIP邀请码被使用10次以上的妈妈均获通过！</p>
-	  <p style="color:red"> 2) 我们将陆续公布后续通过名单！请大家及时 <a href="/weixin/inviteresult/">到这里查看 >></a></p>
+	  <p style="color:red"> 1）第一批审核名单已经公布，请大家 <a href="/weixin/inviteresult/">到这里查看 >></a></p>
 	</div>
       </div>
       <div class="row">
@@ -27,7 +26,7 @@
 	    <img src="{{ sample.pic_url }}" alt="...">
 	  </a>
 
-	  <p><font style="color:red; font-size:20px">{{ today_orders }}</font> 人今日已申请</p>
+	  <p><font style="color:red; font-size:20px">今日{{ today_orders }}</font>人已申请</p>
 	</div>
 
 	<div class="col-xs-6">
