--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -22,7 +22,7 @@
     <div class="panel-heading" style="color:orange">申请攻略</div>
     <div class="panel-body">
       <p>1) 首要任务是让专属VIP邀请码被使用10次以上。</p>
-      <p style="color:red">2) 如果被使用20次以上，亲，您已具有决定性的竞争力啦！</p>
+      <p style="color:red">2) 如果被使用20次以上，您将具有决定性的竞争力！</p>
     </div>
   </div>
 
@@ -40,6 +40,7 @@
       <p style="color:red">把上面二维码图片保存到手机，微信扫一扫，选择右上角“相册”。</p>
       {% else %}
       <p>亲，请耐心等待，您的申请正在审核中。</p>
+      <p>您的专属VIP邀请码<font style="color:red">已被使用{{ usage_count }}次</font>，请继续加油!</p>
       <p>还有<font style="color:red;font-size:20px">{{ slots_left }}</font>份名额可以领取，机会多多。邀请朋友使用您的专属VIP邀请码，越多人使用，您中奖的几率就越大哦！</p>
       <a href="/weixin/sampleads/{{ pk }}/">您的专属邀请码页面 >></a>
       {% endif %}
