--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -14,8 +14,8 @@
       <p style="color:red;">分享<a href="/weixin/sampleads/{{ pk }}/">您的专属VIP邀请码</a>，越多人使用，您中奖的几率就越大！</p>
       {% endif %}
       
-      <p style="color:#3071a9">第一批中奖名单已公布，共{{ first_batch }}名（VIP专属码使用<font style="color:red;">超过10次</font>），祝贺她们！ <a href="/weixin/finallist/1/1/">查看详细名单 >></a></p>
-      <p style="color:#3071a9">第二批中奖名单已公布，共{{ second_batch }}名（VIP专属码使用<font style="color:red;">超过12次</font>），祝贺她们！ <a href="/weixin/finallist/2/1/">查看详细名单 >></a></p>
+      <p style="color:#3071a9">第一批中奖共{{ first_batch }}名（VIP专属码使用<font style="color:red;">超过10次</font>），祝贺她们！ <a href="/weixin/finallist/1/1/">查看详细名单 >></a></p>
+      <p style="color:#3071a9">第二批中奖共{{ second_batch }}名（VIP专属码使用<font style="color:red;">超过12次</font>），祝贺她们！ <a href="/weixin/finallist/2/1/">查看详细名单 >></a></p>
 
     </div>
   </div>
@@ -47,8 +47,9 @@
   <div class="panel panel-default" style="margin-top:5px">
     <div class="panel-heading" style="color:orange">申请攻略</div>
     <div class="panel-body">
-      <p>1) 首要任务是让专属VIP邀请码被使用10次以上。</p>
+      <p>1) 首要任务是让专属VIP邀请码被使用12次以上。</p>
       <p style="color:red">2) 如果被使用20次以上，您将具有决定性的竞争力！</p>
+      <p>3) 作弊者取消资格。我们技术很强大的哦！</p>
     </div>
   </div>
 
