--- a/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/invite_result.html
@@ -29,9 +29,10 @@
       <p>您邀请了<font style="color:red;">{{ usage_count }}位</font>好友，优尼世界感谢您的努力！</p>
       <p>请用下面二维码加入微信群“优尼世界服务群”，有专门的客服为您服务，指导您接下来的操作流程。</p>
       <a href="#" class="thumbnail">
-	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvxy2LNzVj0ibrZBohfZoj47Djr3XH3GNFpxXE1JtH3RiaibacINUBJic0DDgSjVJGCZwBM3GU5D03khQ/0" alt="...">
+	<img src="https://mmbiz.qlogo.cn/mmbiz/yMhOQPTKhLvxy2LNzVj0ibrZBohfZoj47vaUqGEt2LPo9Jz8dGB5HmseXXIyFEKeRw98Yh7t18OeUeOAWaUNAyA/0" alt="...">
       </a>
       <p style="color:red">把上面二维码图片保存到手机，微信扫一扫，选择右上角“相册”。</p>
+      <p style="color:red">注意：群内禁止发广告！否则取消资格并拉黑！</p>
       {% else %}
       <p>亲，请耐心等待，您的申请正在审核中。</p>
       <p>您的专属VIP邀请码<font style="color:red">已被使用{{ usage_count }}次</font>，请继续加油!</p>
