--- a/shopmanager/shopapp/weixin/templates/weixin/final_list.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/final_list.html
@@ -6,7 +6,7 @@
 
 <div class="container-fluid">
   <div class="panel panel-default" style="margin-top:5px">
-    <div class="panel-heading">详细名单 (第一批)</div>
+    <div class="panel-heading">详细名单 (第{{ batch }}批)</div>
     <div class="panel-body">
 
       <div class="row">
