--- a/shopmanager/shopapp/weixin/templates/weixin/weixin_base.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/weixin_base.html
@@ -8,7 +8,9 @@
 
     <!-- Bootstrap -->
     <link href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+    <link href="{{ STATIC_URL }}jquery-datatable-addon/css/demo_page.css" rel="stylesheet">
+    <link href="{{ STATIC_URL }}jquery-datatable-addon/css/demo_table.css" rel="stylesheet">
+    
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -16,7 +18,7 @@
       <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     {% block head_script %}
-
+	
     {% endblock %}
   </head>
   <body>
@@ -30,7 +32,7 @@
     <script src="{{ STATIC_URL }}jquery/jquery.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js"></script>
-
+	<script src="{{ STATIC_URL }}jquery-datatable-addon/jquery.dataTables.min.js" type="text/javascript"></script>
     {% block tail_script %}
     {% endblock %}
 
