--- a/shopmanager/shopapp/weixin/templates/weixin/refundreviewblock.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/refundreviewblock.html
@@ -58,6 +58,7 @@
       </td>
       <td>
 	<select class="form-control" id="id_refund_amount">
+	  <option value="0" >客服协商</option>
 	  <option value="200" >￥2.00</option>
 	  <option value="300" >￥3.00</option>
 	  <option value="400" >￥4.00</option>
