--- a/shopmanager/shopapp/weixin/templates/weixin/refundreview.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/refundreview.html
@@ -92,7 +92,16 @@
     };
 
     $.ajax({url:url, data:data, type:"post", success:callback});
-  }
+  };
+
+  function refundRecord(refund_id) {
+    var url = "/weixin/refundrecord/";
+    var callback = function (res) {
+      $("#id_refund_body")[0].innerHTML = res;
+    };
+    var data = {"refund_id":refund_id};
+    $.ajax({url:url, data:data, success:callback});
+  };
   
   $('#refund_table').dataTable({
    		//"bJQueryUI": true,
@@ -119,6 +128,14 @@
 			"sProcessing": "<img src='/static/img/loading.gif' />"
 		}		
 	});
+
+      {% if first_refund %}	
+      {% for refund in refundlist %} 
+      $("#id_{{ refund.pk }}").on("click", function() { refundRecord({{ refund.pk }}); });
+      {% endfor %}
+      {% endif %}
+
+
 </script>
 {% endblock %}
 
