--- a/shopmanager/shopapp/weixin/templates/weixin/refundapply.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/refundapply.html
@@ -5,7 +5,7 @@
   <div class="col-xs-8">
     <select id="id_refund" class="form-control input-sm" onchange="refundSelection(this);">
       <option value="10">请选择</option>
-      <option value="0">朋友圈晒单</option>
+<!--      <option value="0">朋友圈晒单</option> -->
       <option value="1">VIP 邀请</option>
     </select>
   </div>
