--- a/shopmanager/shopapp/weixin/templates/weixin/refundreviewblock.html
+++ b/shopmanager/shopapp/weixin/templates/weixin/refundreviewblock.html
@@ -66,7 +66,7 @@
 	</select>
       </td>
       <td>
-	<input type="text" class="form-control" id="id_review_note" value="{{ first_refund.note }}"/>
+	<input type="text" class="form-control" id="id_review_note" value="{{ first_refund.review_note }}"/>
 	<input type="hidden" id="id_refund_pk" value="{{ first_refund.pk }}"/>{% csrf_token %}
       </td>
       <td><select class="form-control" id="id_action">
